<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:padding="30dp">

  <EditText
      android:id="@+id/editTextEmail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="25dp"
      android:background="@drawable/rounded_button_drawable"
      android:hint="@string/login"
      android:inputType="textEmailAddress"
      android:padding="10dp"
      android:textColor="@color/color_digitacao"
      android:textColorHint="@color/white"
      android:textSize="13sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView3">

  </EditText>

  <EditText
      android:id="@+id/editTextSenha"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:padding="10dp"
      android:background="@drawable/rounded_button_drawable"
      android:hint="@string/senha"
      android:inputType="textEmailAddress"
      android:textColor="@color/color_digitacao"
      android:textColorHint="@color/white"
      android:textSize="13sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
      app:layout_constraintVertical_bias="0.0">

  </EditText>

  <Button
      android:id="@+id/button_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/button_enviar_drawable"
      android:padding="5dp"
      android:text="@string/botao_enviar"
      android:textSize="13sp"
      app:layout_constraintBottom_toTopOf="@+id/button_criar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextSenha"
      app:layout_constraintVertical_bias="0.261" />

  <Button
      android:id="@+id/button_criar"
      android:theme="@style/padraButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/button_criar_drawable"
      android:padding="5dp"
      android:text="@string/botao_criar"
      android:textSize="12sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />


  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="159dp"
      android:layout_height="152dp"
      android:layout_marginTop="52dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/outline_delivery_dining" />
</androidx.constraintlayout.widget.ConstraintLayout>