<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="415dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/img_criar" />
    </LinearLayout>

    <TextView
        android:id="@+id/tituloSegundaTela"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/titulo_tela_segunda"
        android:textAllCaps="true"
        android:textColor="@color/segunda_color_bacground"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/color_botton"
        android:hint="@string/nome"
        android:inputType="textEmailAddress"
        android:paddingTop="10dp"
        android:textColor="@color/segunda_color_bacground"
        android:textColorHint="@color/color_botton"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloSegundaTela"></EditText>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/color_botton"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingTop="10dp"
        android:textColor="@color/segunda_color_bacground"
        android:textColorHint="@color/color_botton"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNome"></EditText>

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/color_botton"
        android:hint="@string/senha"
        android:inputType="textEmailAddress"
        android:paddingTop="10dp"
        android:textColor="@color/segunda_color_bacground"
        android:textColorHint="@color/color_botton"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"></EditText>

    <EditText
        android:id="@+id/editTextConfirmarSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/color_botton"
        android:hint="@string/confirmar_senha"
        android:inputType="textEmailAddress"
        android:paddingTop="10dp"
        android:textColor="@color/segunda_color_bacground"
        android:textColorHint="@color/color_botton"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSenha"></EditText>

    <Button
        android:id="@+id/button_criar_conta"
        android:layout_width="210dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_enviar_drawable"
        android:padding="5dp"
        android:text="@string/botao_cadastrar"
        android:textSize="13dp"
        app:layout_constraintBottom_toTopOf="@+id/button_criar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmarSenha"
        app:layout_constraintVertical_bias="0.261" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="132dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:text="Já tem uma Conta?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_criar_conta"
        app:layout_constraintVertical_bias="0.786" />


</androidx.constraintlayout.widget.ConstraintLayout>